<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"/>
        <item
            android:id="@+id/nav_events"
            android:title="@string/events"
            android:icon="@drawable/baseline_event_24"/>
        <item
            android:id="@+id/nav_forum"
            android:title="@string/forums"
            android:icon="@drawable/baseline_forum_24"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/baseline_app_settings_alt_24"/>
    </group>
</menu>