<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignUpActivity">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp"
                    android:textSize="20sp"
                    android:text="@string/sign_up"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullNameTil"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/full_name"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTil"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/password"
                        android:maxLength="15"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cPasswordTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cPasswordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="12dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLength="15"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpButton"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/register"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/alreadyAUserButton"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/already_a_user_sign_in"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>